--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "dotenv": "^16.4.7",
+        "node-schedule": "^2.1.1",
         "nodemailer": "^6.9.16"
     },
     "devDependencies": {
